[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "apflow-demo"
version = "0.7.0"
description = "Demo deployment of apflow with rate limiting and pre-computed results"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "aipartnerup", email = "tercel.yi@gmail.com"}
]
license = "Apache-2.0"
keywords = ["ai", "agent", "orchestration", "demo", "apflow"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

# Core dependencies
dependencies = [
    "apflow[all]>=0.17.0",  # Core library (includes database support)
    "fastapi>=0.115.0",              # API framework (already included in a2a, but explicit)
    "python-dotenv>=1.0.0",          # Environment variables
    "pydantic>=2.0.0",                # Data validation
    "pydantic-settings>=2.0.0",      # Settings management
    "sqlalchemy-session-proxy>=0.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-order>=1.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "python-dotenv>=1.0.0",
    "apscheduler>=3.10.0",
]

#[project.scripts]
#apflow-demo = "apflow_demo.cli:main"

[project.entry-points."apflow.cli_plugins"]
users = "apflow_demo.cli.users:users_app"
serve = "apflow_demo.cli.serve:serve_app"

[tool.setuptools]
package-dir = {"" = "src"}
packages = {find = {where = ["src"]}}

[tool.setuptools.package-data]
apflow_demo = ["config/*.yaml", "config/*.yml"]

[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312']

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"
# Use "session" scope to share event loop across all tests and fixtures
# This ensures SQLAlchemy async engine connection pool binds to the same event loop
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"

